padding and changes images

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
 </head>
 
-<body class="bg-secondary">
+<body class="bg-secondary p-3">
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4 mt-4 ml-3 mr-3 border border-danger rounded">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4 ml-3 mr-3 border border-danger rounded">
             <a class="navbar-brand" href="https://www.gsstore.org/"><img src="images\gs-amblem.jpg" alt="gs-store"
                     style="width: 5vw; height: 5vh;"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -201,7 +201,7 @@
                 <div class="col-md-4 col-lg-3">
                     <div class="card border border-danger rounded">
                         <button type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter">
-                            <img src="images\ic-saha.png" class="card-img-top" alt="ic-saha-forma">
+                            <img src="images\deplasman.png" class="card-img-top" alt="deplasman-forma">
                         </button>
                         <div class="card-body">
                             <h5 class="card-title text-center">Deplasman Forma</h5>
@@ -213,7 +213,7 @@
                 <div class="col-md-4 col-lg-3">
                     <div class="card border border-warning rounded">
                         <button type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter">
-                            <img src="images\ic-saha.png" class="card-img-top" alt="ic-saha-forma">
+                            <img src="images\alternatif.png" class="card-img-top" alt="alternatif-forma">
                         </button>
                         <div class="card-body">
                             <h5 class="card-title text-center">Alternatif </h5>
@@ -252,7 +252,6 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
                 </div>
             </div>
